.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: type-test-deployment
  labels:
    app: type-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: type-test
  template:
    metadata:
      labels:
        app: type-test
    spec:
      containers:
        - name: type-test-container
          image: jl115/type-test:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: type-test-service
  namespace: m324-csbe1
spec:
  selector:
    app: type-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: LoadBalancer
