.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: type-test # Change this to your app name
  namespace: m324-csbe1 # Ask the teacher for the namespace name
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: type-test # Change this to your app name
